# PRISM

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  HOW-TO-RUN.md  Project Initiation Report_ Persona-Driven API Hackathon System.md  README.md  docker-compose.yml  entity_resolver.py  main.py  orchestrator.py  prism-four-personas-developer-guide.md  pyproject.toml  users.py
cache/: abl1_abl1.json  gefitinib_egfr.json  imatinib_abl1.json  imatinib_bcr-abl.json  parse_1d81f762bf23.json  parse_1fd5e14a73bc.json  parse_3b9033e5356b.json  parse_49f68a5c8493.json  parse_5d41402abc4b.json  parse_6bdaf54c76ac.json  parse_6c0dce11baf1.json  parse_832a4e605ef0.json  parse_89bf2ec5a1bc.json  parse_a01766c46a96.json  parse_b1c66c09a043.json  parse_b5a913ad01a0.json  parse_c6982a2037ee.json  parse_d3f4404aa39b.json  parse_e8cd8475b2a4.json  parse_f55d89ff8bc8.json
connectors/: __init__.py  admet.py  alphafold.py  chembl.py  clinvar.py  gtex.py  interpro.py  opentargets.py  pdb.py  proteinatlas.py  pubchem.py  pubmed.py  rdkit_descriptors.py  reactome.py  string_ppi.py  uniprot.py  utils.py
frontend/: index.html
personas/: cell_biologist.yaml  cell_molecular_biologist.yaml  comp_biologist.yaml  computational_biologist.yaml  medicinal_chemist.yaml  pathologist.yaml
prompts/: response_formatter.txt
scripts/: record_daraxonrasib_demo.py
tests/: conftest.py  test_api.py  test_connectors.py  test_entity_resolver.py  test_orchestrator.py
tests/e2e/: conftest.py  test_full_personas.py  test_ui.py
tests/ground_truth/: GT_comp_biologist.md  GT_pathologist.md  (+3 more)
