[project]
name = "prism"
version = "1.0.0"
description = "Persona-Driven Research Intelligence System — Gladstone Hackathon 2026"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
    "tenacity>=8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pytest.ini_options.markers]
backend = "backend unit/integration tests"
e2e = "Playwright end-to-end tests"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-playwright>=0.8.0",
]
